--- a/Random Users/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboards/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="xlp-9H-6mb">
             <objects>
                 <tableViewController id="uer-hq-YKk" customClass="RandomUsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vxh-FX-6t2">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vxh-FX-6t2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -24,15 +24,18 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tJR-QA-MGt">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tJR-QA-MGt">
                                             <rect key="frame" x="16" y="7.5" width="45" height="45"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="tJR-QA-MGt" secondAttribute="height" multiplier="1:1" id="9Uz-3t-weM"/>
                                                 <constraint firstAttribute="width" constant="45" id="XgP-tC-4ro"/>
                                             </constraints>
+                                            <viewLayoutGuide key="safeArea" id="RLj-ZM-7y1"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5m1-l0-vk7">
                                             <rect key="frame" x="77" y="19.5" width="274" height="21"/>
+                                            <viewLayoutGuide key="safeArea" id="MSx-Rc-ilI"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
